<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/search_title1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00bfa5"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/title_back"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_margin="5dip"
            android:background="@drawable/ic_arrow_back_white_36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/searchbook"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"       
        android:background="#00bcd4"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit"
            android:inputType="phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/hint_isbn"
            android:maxLines="1"
            android:paddingTop="0dp"
            android:textColorHint="#9e9e9e"
            android:textSize="18sp" >
        </EditText>

        <Button
            android:id="@+id/search_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit"
            android:layout_centerHorizontal="true"
            android:text="@string/sousuo"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>